Add Type and Status filter

--- a/Kira/appsettings.json
+++ b/Kira/appsettings.json
@@ -17,7 +17,14 @@
         {
           "Project": "",
           "IncludedComponents": [],
-          "ExcludedComponents": []
+          "ExcludedComponents": [],
+          "ExcludedTypes": [
+            {
+              "Type": "",
+              "IncludedStatus": [],
+              "ExcludedStatus": []
+            }
+          ]
         }
       ]
     }
