--- a/src/Kira/appsettings.json
+++ b/src/Kira/appsettings.json
@@ -13,20 +13,15 @@
     },
     "Jira": {
       "BaseAddress": "",
-      "Projects": [
-        {
-          "Project": "",
-          "IncludedComponents": [],
-          "ExcludedComponents": [],
-          "ExcludedTypes": [
-            {
-              "Type": "",
-              "IncludedStatus": [],
-              "ExcludedStatus": []
-            }
-          ]
-        }
-      ]
+      "Defaults": {
+        "Projects": [],
+        "IncludedComponents": [],
+        "ExcludedComponents": [],
+        "IncludedTypes": [],
+        "ExcludedTypes": [],
+        "IncludedStatues": [],
+        "ExcludedStatues": []
+      }
     }
   }
 }
