--- a/src/Kira/Kira.csproj
+++ b/src/Kira/Kira.csproj
@@ -41,6 +41,12 @@
         <Compile Update="Pages\FilterForm.designer.razor.cs">
             <DependentUpon>FilterForm.razor</DependentUpon>
         </Compile>
+        <Compile Update="Pages\FilterForm.model.abstarct.razor.cs">
+          <DependentUpon>FilterForm.razor</DependentUpon>
+        </Compile>
+        <Compile Update="Pages\FilterForm.model.form.razor.cs">
+          <DependentUpon>FilterForm.razor</DependentUpon>
+        </Compile>
     </ItemGroup>
 
 </Project>
