--- a/src/Kira.Infrastructure/Kira.Infrastructure.csproj
+++ b/src/Kira.Infrastructure/Kira.Infrastructure.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0"/>
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1"/>
         <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1"/>
