--- a/src/Kira/appsettings.json
+++ b/src/Kira/appsettings.json
@@ -7,20 +7,58 @@
   },
   "AllowedHosts": "*",
   "Kira": {
-    "Auth": {
-      "Username": "",
-      "Password": ""
+    "UIOptions": {
+      "Filter": {
+        "Icon": "Search",
+        "Text": "Search"
+      }
     },
-    "Jira": {
-      "BaseAddress": "",
-      "Defaults": {
-        "Projects": [],
-        "IncludedComponents": [],
-        "ExcludedComponents": [],
-        "IncludedTypes": [],
-        "ExcludedTypes": [],
-        "IncludedStatues": [],
-        "ExcludedStatues": []
+    "Companies": {
+      "Company1": {
+        "Identity": {
+          "Name": "",
+          "Master": true
+        },
+        "Auth": {
+          "Username": "",
+          "Password": ""
+        },
+        "Jira": {
+          "BaseAddress": "",
+          "UIAddress": "",
+          "Defaults": {
+            "Projects": [],
+            "IncludedComponents": [],
+            "ExcludedComponents": [],
+            "IncludedTypes": [],
+            "ExcludedTypes": [],
+            "IncludedStatues": [],
+            "ExcludedStatues": []
+          }
+        }
+      },
+      "Company2": {
+        "Identity": {
+          "Name": "",
+          "Master": false
+        },
+        "Auth": {
+          "Username": "",
+          "Password": ""
+        },
+        "Jira": {
+          "BaseAddress": "",
+          "UIAddress": "",
+          "Defaults": {
+            "Projects": [],
+            "IncludedComponents": [],
+            "ExcludedComponents": [],
+            "IncludedTypes": [],
+            "ExcludedTypes": [],
+            "IncludedStatues": [],
+            "ExcludedStatues": []
+          }
+        }
       }
     }
   }
